--- a/PictureDay.csproj
+++ b/PictureDay.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 <PropertyGroup>
 	<OutputType>WinExe</OutputType>
@@ -18,6 +18,7 @@
 </PropertyGroup>
 
 <ItemGroup>
+	<PackageReference Include="Microsoft.Win32.SystemEvents" Version="8.0.0" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	<PackageReference Include="System.Drawing.Common" Version="8.0.0" />
 </ItemGroup>
